<resources>
    <string name="app_name">Premium</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="createAccount">Create Account</string>
    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>
    <string name="emailAddress">Email address</string>
    <string name="password">Password</string>
    <string name="rePassword">Confirm password</string>
    <string name="phone">Phone number</string>
    <string name="birthday">Birthday</string>
    <string-array name="day">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="month">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="year">Year</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="signUp">Sign Up</string>

    <string name="log_in">Log In</string>
    <string name="register">Register now</string>

    <string name="log_out">Log out</string>
    <string name="profile">Profile</string>

    <string name="title_activity_tabs">Tabs</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_sub_main_window">SubMainWindow</string>
    <string name="contacts">Contacts</string>
    <string name="story">Story</string>
    <string name="add_friend">Add friend</string>
    <string name="setting">Setting</string>

</resources>
