<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/yellow"
    android:orientation="vertical"
    tools:context=".LogIn">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/user_login_icon" />

    <EditText
        android:id="@+id/et_email_login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/emailAddress"
        android:inputType="textEmailAddress"
        android:textColor="@color/lightPurple"
        android:textColorHint="@color/lightPurple"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/et_password_login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/lightPurple"
        android:textColorHint="@color/lightPurple"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btn_log_in"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/lightBlue"
        android:text="@string/log_in"
        android:textAlignment="center"
        android:textColor="@color/lightPurple"
        android:textSize="28sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/t_register"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/lightBlue"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="@color/lightPurple"
        android:textSize="28sp"
        android:textStyle="bold" />

</LinearLayout>